# Basic-UI-Automation

./: .gitignore  BasicUIAutomation.h  CMakeLists.txt  README.md  out.txt
include/: ButtonPress.h  Keyboard.h  Mouse.h  VKeysToStringMap.h  WindowsManip.h  windowInfo_s.h
src/: BasicUIAutomation.cpp  CMakeLists.txt
src/Keyboard/: CMakeLists.txt  Keyboard.cpp  Keyboard.h
src/KeystrokeAutomation/: ButtonPress.cpp  ButtonPressHelpers.cpp  ButtonPressHelpers.h  CMakeLists.txt  InputSpecifications.txt  VirtualKeys.cpp  VirtualKeys.h
src/KeystrokeAutomation/ButtonPress/: ButtonPress.cpp  CMakeLists.txt  InputSpecifications.txt
src/KeystrokeAutomation/ButtonPressHelpers/: ButtonPressHelpers.cpp  ButtonPressHelpers.h  CMakeLists.txt
src/KeystrokeAutomation/Keyboard/: CMakeLists.txt  Keyboard.cpp
src/KeystrokeAutomation/Mouse/: CMakeLists.txt  Mouse.cpp
src/KeystrokeAutomation/Utility/: CMakeLists.txt  Utility.cpp  Utility.h
src/KeystrokeAutomation/Utility/VirtualKeys/: CMakeLists.txt  VirtualKeys.cpp  VirtualKeys.h
src/Mouse/: CMakeLists.txt  Mouse.cpp
src/Utility/: CMakeLists.txt  StringManip.cpp  StringManip.h
src/Utility/StringManip/: CMakeLists.txt  StringManip.cpp  StringManip.h
src/WindowManip/: CMakeLists.txt  WindowsManip.cpp  WindowsManip.h
src/WindowsManip/: CMakeLists.txt  WindowsManip.cpp
tests/: CMakeLists.txt  test_ButtonPressHelpers.cpp  test_Mouse.cpp  test_Utility-StringManip.cpp  tests_main.cpp
